# devy

./: .eslintrc.json  .gitattributes  .gitignore  .prettierrc.json  README.en.md  README.md  README.pt.md  index.html  package.json  project.infos.json  tsconfig.json  vite.config.ts
public/favicons/: site.webmanifest
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/Pomodoro/: index.tsx  styles.ts
src/app/Pomodoro/components/Clock/: index.tsx  styles.ts
src/app/Pomodoro/components/Infos/: index.tsx  styles.ts
src/app/Pomodoro/components/PomodoroRunning/: index.tsx  styles.ts
src/app/Pomodoro/forms/ClockPage/: index.tsx  styles.ts
src/app/Pomodoro/forms/ClockPage/components/Clock/: index.tsx  (+1 more)
src/app/SoundsList/: index.tsx  sounds.tsx  styles.ts
src/app/SoundsList/components/Infos/: index.tsx  styles.ts
src/app/SoundsList/components/SoundCard/: index.tsx  styles.ts
src/assets/: GlobalStyles.ts
src/assets/hooks/useModal/: index.tsx  styles.ts
src/assets/hooks/usePagination/: index.tsx  styles.ts
src/assets/hooks/usePagination/components/: PaginationComponent.tsx
src/assets/hooks/usePagination/utils/: calculateMaxPages.ts  getPagesButtons.tsx
src/assets/hooks/usePomodoro/: index.ts
src/assets/hooks/usePomodoro/utils/: context.ts  provider.tsx
src/assets/hooks/usePomodoroTimer/: index.ts
src/assets/hooks/usePomodoroTimer/utils/: sendSystemNotification.ts
src/assets/hooks/useTranslation/: index.ts
src/assets/hooks/useTranslation/utils/: context.ts  provider.tsx
src/assets/locales/: enUS.locale.json  ptBR.locale.json
src/components/AppWrapper/: index.ts
src/components/ConfirmationModal/: index.tsx  styles.ts
src/components/Titlebar/: index.tsx  styles.ts
src/components/Titlebar/components/AppInfos/: index.tsx
src/components/Titlebar/components/CloseConfirmationModal/: index.tsx  styles.ts
src/components/Titlebar/components/Controls/: index.tsx  styles.ts
