[package]
name = "devy"
version = "1.0.0"
description = "Devy is an app that will help you concentrate on your studies, it provides sound tools, a timer, etc, to help you concentrate."
authors = ["Diogo Pereira(FhillSlinger)"]
license = "MIT"
repository = "https://github.com/FhillSlinger/devy.git"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
sysinfo = "0.27.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all", "system-tray"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
